--- a/force-security-demo/pom.xml
+++ b/force-security-demo/pom.xml
@@ -16,5 +16,10 @@
 			<artifactId>force-security-browser</artifactId>
 			<version>${force.security.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
